--- a/styles.css
+++ b/styles.css
@@ -1,47 +1,43 @@
 body {
-    font-family: 'Roboto', sans-serif;
-    background-color: #282c34;
-    color: #ffffff;
+    font-family: 'Roboto', sans-serif; 
+    background-color: #282c34; 
+    color: #ffffff; 
     text-align: center;
     margin: 0;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
 }
 
 .container {
-    width: 90%;
-    max-width: 1200px;
+    width: auto;
     margin: 40px auto;
     padding: 30px;
-    background-color: #3c404d;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25);
-    border-radius: 15px;
+    background-color: #3c404d; 
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.25); 
+    border-radius: 15px; 
 }
 
 h1 {
-    color: white;
-    margin-bottom: 20px; /* Add margin for spacing */
+    color: white; 
 }
 
 .instructions {
-    font-size: 1.25rem;
+    font-size: 20px;
     margin-bottom: 30px;
     color: #adbac7;
 }
 
 #game-board {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    gap: 20px; /* Ensure even gaps */
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    gap: 20px;
     justify-content: center;
     padding: 20px;
 }
 
 .card {
-    width: 100%;
-    padding-bottom: 75%;
+    width: 211.8px;
+    height: 166.2px;
     background-color: #565c6f;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -50,25 +46,24 @@ h1 {
     align-items: center;
     justify-content: center;
     overflow: hidden;
-    position: relative;
 }
 
 .card img {
-    position: absolute;
     width: 100%;
-    height: 100%;
-    object-fit: cover; 
-    visibility: hidden; 
+    height: auto;
+    visibility: hidden; /* Hide images by default */
+    display: block;
 }
 
 .card.show img {
-    visibility: visible; 
+    visibility: visible; /* Show image when card is flipped */
 }
 
 #start-game {
     background-color: #4caf50;
     color: white;
     padding: 12px 24px;
+    border: none;
     border-radius: 5px;
     cursor: pointer;
     font-size: 18px;
@@ -76,23 +71,6 @@ h1 {
 }
 
 #start-game:hover {
-    background-color: #43a047;
-    transform: scale(1.05);
-}
-
-/* Media Queries for smaller screens */
-@media (max-width: 600px) {
-    .instructions {
-        font-size: 1rem; 
-        margin-bottom: 20px; /* Adjust margin */
-    }
-    
-    #game-board {
-        gap: 10px; 
-        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); /* Adjust columns */
-        padding-bottom: calc(100% / var(--columns)); /* Maintain aspect ratio */
-        border-radius: var(--border-radius); /* Use variables for consistency */
-        box-shadow:
-            var(--box-shadow); /* Adjust shadow */
-        }
+    background-color: #43a047; /* Darker on hover */
+    transform: scale(1.05); /* Slightly enlarges on hover */
 }
